add join and leave

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node index",
     "dev": "nodemon index",
-    "lint": "npx eslint ./"
+    "lint": "npx eslint ."
   },
   "author": "Joona Kemppainen",
   "license": "MIT",
